tests/errors/sem.expected-bool.not-op.or
main :: () -> void {
    x := 1;
    not x;
};
